
[Test_Form_Rendering_Error - 1]
<form action="POST" action="" encoding="">
    <label for="position">position</label>
<input name="position" type="number" value="1" id="position">
<span>The position</span>

</form>
---

[Test_Form_Rendering_Error - 2]
<form action="POST" action="" encoding="">
    <label for="position">position</label>
<input name="position" type="number" value="foo" id="position">
<span>The position</span>
    <ul>
            <li>value does not match the expected type</li>
            <li>the value is not a valid email</li>
    </ul>

</form>
---
